# sparsehash-cmake

./: CMakeLists.txt  example.cpp
cmake/: CheckHashFunction.cmake  CheckHashMap.cmake  DetermineCompilerDefinitions.cmake  SetupGoogleNamespace.cmake
src/: sparseconfig.h.in
